- harddrake:
  o display the PCI domain too

Version 10.4.162 - 08 August 2007, by Thierry Vignaud

- fix fetching translations from "libDrakX-standalone" domain (#32402)
- diskdrake:
  o do not show partition types which have no associated filesystem
    for LVM LV (#32326)

Version 10.4.161 - 06 August 2007, by Thierry Vignaud

- drakbug:
  o exceptions with "\n" are considered normal ways to quit and thus
    do not fire up drakbug (eg: #32292)
- diskdrake:
  o restore progress bar when formatting ext3

Version 10.4.160 - 06 August 2007, by Thierry Vignaud

- diskdrake: 
  o add support for "nodiratime" mount option
  o fix range max value >2TB when creating a partition (useful for LVs >2TB)
- drakxservices: describe a few more services (#18612)

Version 10.4.159 - 06 August 2007, by Thierry Vignaud

- diskdrake:
  o allow setting "flush" option (for vfat)
- drakbug: do not report "wizcancel" exceptions (#32308)

Version 10.4.157 - 03 August 2007, by Thierry Vignaud

- report real version on --help
- drakbug:
  o report version of drakbug
- list iwl3945/iwl4965 modules (and unlist ipw3945)
- logdrake:
  o display "save" & "quit" button when run from the control center

Version 10.4.156 - 02 August 2007, by Thierry Vignaud

- localedrake:
  o adapt configuration of consolefonts for kbd
- logdrake:
  o fix crash if /var/log/explanations doesn't exist (#32234)

Version 10.4.153 - 02 August 2007, by Thierry Vignaud

- drakbug:
  o ask people to report lspcidrake -v output rather than lspci since it's more
    usefull to us
  o display the program that actually crashed and the error message
  o do not fire on exceptions in eval { }
  o do not loop if drakbug crashes
  o put full backtrace on bugzilla, not only last call point

Version 10.4.152 - 01 August 2007, by Thierry Vignaud

- drakbug:
  o add --error option in order to provide a backtrace
  o fix crashing on unknown programs
  o fix passing several options