@@ -1,3 +1,5 @@
+- for XFdrake: use update-alternatives command instead doing things by hand
+  (this uses --set, new feature of update-alternatives) (#32362)
 - harddrake:
   o display the PCI domain too
 
